# AGP-Strategy-Suite

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  overlay.rs
apps/desktop/src/components/: BrakeDisplay.tsx  DiagnosticCard.tsx  FuelGauge.tsx  GForceTrace.tsx  OpponentCard.tsx  RecommendationCard.tsx  SetupComparison.tsx  StandingsTable.tsx  StrategyTimeline.tsx  TireDisplay.tsx  UpdateModal.tsx
apps/desktop/src/components/overlay/: MiniStandings.tsx  (+3 more)
apps/desktop/src/hooks/: useTelemetry.ts  useUpdater.ts
apps/desktop/src/pages/: LiveTiming.tsx  OverlayConfig.tsx  Setup.tsx  Strategy.tsx  TelemetryAnalysis.tsx
apps/desktop/src/stores/: telemetryStore.ts
apps/desktop/src/styles/: index.css
apps/simhub-plugin/: AGPStrategy.sln  build.ps1
apps/simhub-plugin/AGPStrategy/: AGPStrategy.csproj  AGPStrategyPlugin.cs  DataConnector.cs  PropertyProvider.cs
apps/simhub-plugin/AGPStrategy/Models/: AGPData.cs
apps/simhub-plugin/AGPStrategy/Properties/: Resources.Designer.cs  Resources.resx
apps/simhub-plugin/AGPStrategy/Resources/: README.txt
apps/simhub-plugin/SimHubSDKStub/: GameData.cs  GameReaderCommon.csproj  PluginInterfaces.cs  SimHub.Plugins.csproj
docs/: simhub-integration.md  user-guide.md
installer/: build.ps1  generate-keys.ps1
installer/nsis/: agp-strategy-suite.nsi
(+2 files in other folders)
